--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -1,44 +1,5 @@
 <!-- Generated with the help of Claude 3 Sonnet -->
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Counter</title>
-    <style>
-        body {
-            font-family: monospace;
-            text-align: center;
-            padding-top: 50px;
-            font-size: 20px;
-        }
-        .counter {
-            font-size: 48px;
-            font-weight: bold;
-            padding: 10px;
-        }
-
-        td {
-            min-width: 150px;
-            border: 1px solid black;
-            box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.5);
-            background-color: white;
-            padding: 10px;
-        }
-
-        .provider_counter {
-            color: #ff414d;
-        }
-
-        .database_counter {
-            color: #7a2dd0;
-        }
-
-        .structure_counter {
-            color: #00acd9;
-        }
-
-    </style>
-</head>
-<body>
+<div class="counter_body">
     <table>
         <tr>
             <td><span id="provider_counter" class="provider_counter counter">0</span></td>
@@ -78,4 +39,4 @@
         createCounter(29, 1, 'database_counter');
         createCounter(27730555, 2, 'structure_counter');
     </script>
-</body>
+</div>
