--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -1,6 +1,6 @@
 <!-- Generated with the help of Claude 3 Sonnet -->
 <div class="counter_body">
-    <table>
+    <table class="counter_table">
         <tr>
             <td><span id="provider_counter" class="provider_counter counter">0</span></td>
             <td><span id="database_counter" class="database_counter counter">0</span></td>
@@ -11,6 +11,7 @@
             <th>DATABASES</th>
             <th>STRUCTURES</th>
         </tr>
+    </table>
 
     <script>
         function createCounter(targetValue, totalTime, elementId) {
