--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -117,7 +117,19 @@ img {
     padding: 10px;
 }
 
-td {
+.counter_table.td {
+    font-family: monospace;
+    text-align: center;
+    min-width: 150px;
+    border: 1px solid black;
+    box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.5);
+    background-color: white;
+    padding: 10px;
+}
+
+.counter_table.tr {
+    font-family: monospace;
+    text-align: center;
     min-width: 150px;
     border: 1px solid black;
     box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.5);
