--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -1,6 +1,6 @@
 <!-- Generated with the help of Claude 3 Sonnet -->
 <div class="counter_body">
-    <table class="counter_table">
+    <table class="counter_table" style="margin-left: auto; margin-right: auto">
         <tr>
             <td><span id="provider_counter" class="provider_counter counter">0</span></td>
             <td><span id="database_counter" class="database_counter counter">0</span></td>
