--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -140,12 +140,15 @@ img {
 
 .provider_counter {
     color: #ff414d;
+    font-family: monospace;
 }
 
 .database_counter {
     color: #7a2dd0;
+    font-family: monospace;
 }
 
 .structure_counter {
     color: #00acd9;
+    font-family: monospace;
 }
