--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -6,7 +6,7 @@
             <td><span id="database_counter" class="database_counter counter">0</span></td>
             <td><span id="structure_counter" class="structure_counter counter">0</span></td>
         </tr>
-        <tr>
+        <tr style="font-family: monospace; background-color: white; text-align: center;">
             <th>PROVIDERS</th>
             <th>DATABASES</th>
             <th>STRUCTURES</th>
