--- a/_includes/next_meeting.html
+++ b/_includes/next_meeting.html
@@ -1,1 +1,1 @@
-[Friday 10<sup>th</sup> May 2024 at 15:00 UTC/17:00 CEST](https://www.timeanddate.com/worldclock/fixedtime.html?iso=20240510T1500){:target="_blank"}
+[Friday 10<sup>th</sup> May 2024 at 15:00 UTC/17:00 CEST.](https://www.timeanddate.com/worldclock/fixedtime.html?iso=20240510T1500){:target="_blank"}
